@@ -34,6 +34,17 @@
       </li>
   </replace>
 
+  <!-- Rough translation of workflow state to text emphasis classes -->
+  <replace content="//*[contains(@class, 'state-published') or contains(@class, 'state-external') or contains(@class, 'state-open') or contains(@class, 'state-expired')]/@class">
+    <xsl:attribute name="class"><xsl:value-of select="." /> text-success</xsl:attribute>
+  </replace>
+  <replace content="//*[contains(@class, 'state-private') or contains(@class, 'state-closed')]/@class">
+    <xsl:attribute name="class"><xsl:value-of select="." /> text-error</xsl:attribute>
+  </replace>
+  <replace content="//*[contains(@class, 'state-pending') or contains(@class, 'state-protected') or contains(@class, 'state-pending_external')]/@class">
+    <xsl:attribute name="class"><xsl:value-of select="." /> text-warning</xsl:attribute>
+  </replace>
+
   <replace css:content="#edit-bar > .contentActions">
       <div class="clearfix">
           <div class="btn-toolbar pull-right">
