@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Bootstrap: translate workflow states into textual emphasis classes.
+  [davidjb] 
 - Bootstrap: style album/thumbnail views for folders with Bootstrap markup.
   [davidjb]
 - Bootstrap: style portlet management options with Bootstrap markup.
